k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: day-to-us-backend
  namespace: day-to-us
spec:
  replicas: 1
  selector:
    matchLabels:
      app: day-to-us-backend
  template:
    metadata:
      labels:
        app: day-to-us-backend
    spec:
      imagePullSecrets:
      - name: regcred

      containers:
      - name: backend
        image: ghcr.io/dong5854/day-to-us-backend:latest
        ports:
        - containerPort: 8080
        resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "400m"
#        livenessProbe:
#            httpGet:
#              path: /
#              port: 8080
#            initialDelaySeconds: 60
#            periodSeconds: 10
#            timeoutSeconds: 5
#            successThreshold: 1
#            failureThreshold: 3
#        readinessProbe:
#            httpGet:
#              path: /
#              port: 8080
#            initialDelaySeconds: 45
#            periodSeconds: 10
#            timeoutSeconds: 5
#            successThreshold: 1
#            failureThreshold: 3
