k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: day-to-us-backend-svc
  namespace: day-to-us
spec:
  selector:
    app: day-to-us-backend
  ports:
    - port: 8080
      targetPort: 8080
