k8s/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: day-to-us-route
  namespace: day-to-us
spec:
  parentRefs:
  - name: edge-gw
    namespace: nginx-gateway
  hostnames:
  - "day-to-us-api.movingzero.org" 
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: day-to-us-backend-svc
      port: 8080
